--- a/Carr/Components/Pages/Services.razor
+++ b/Carr/Components/Pages/Services.razor
@@ -33,7 +33,7 @@
                     <p class="cost">Цена: не указана</p>
                 }
                 <div class="service-card-actions">
-                    <button @onclick="@(() => NavigationManager.NavigateTo("/Client"))">Записаться</button>
+                    <button @onclick="@(() => NavigationManager.NavigateTo("/"))">Записаться</button>
                     <button @onclick="() => RepairSe.RemoveService(service)">Удалить</button>
                 </div>
             </div>
